--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Reiten</string>
     <string name="title_activity_maps">Map</string>
-    <string name="google_direction_api">AIzaSyCRTrVWWo9yW9HomO3bKl7ilRyXTn2xzO8</string>
+    <string name="google_direction_api">AIzaSyDNzfaOxZ0AyMXMzDBZuNwCDqKe1MoMEj0</string>
     <string name="title_activity_nav_drawer">NavDrawer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -19,4 +19,7 @@
     <string name="find_user">FIND USER</string>
     <string name="online">Online</string>
     <string name="offline">Offline</string>
+    <string name="title_activity_maps_c">Map</string>
+    <string name="title_activity_place_picker">Map</string>
+    <string name="title_activity_home">Map</string>
 </resources>
